--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,7 +32,7 @@
     "selectedView": "log"
   },
   "fileWatcher": {
-    "enabled": true,
+    "enabled": false,
     "watchedExtensions": [
       "less",
       "sass",
