--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,17 @@
   "name": "olfaMaslahTrigoGame",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "script/script.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "styles",
+      "styles/partials"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -23,8 +31,11 @@
       "imports": [
         "styles/partials/_setup.scss",
         "styles/partials/_global.scss",
-        "styles/partials/_nav.scss",
-        "styles/partials/_index.scss"
+        "styles/partials/_circle.scss",
+        "styles/partials/_index.scss",
+        "styles/partials/_responsive.scss",
+        "styles/partials/_header.scss",
+        "styles/partials/_footer.scss"
       ]
     }
   ],
